Fix deprecation warnings and typos in csimple extension