@@ -20,7 +20,7 @@ import java.io.BufferedReader;
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStreamReader;
-import java.net.URISyntaxException;
+import java.lang.reflect.InvocationTargetException;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
@@ -49,6 +49,7 @@ import io.quarkus.bootstrap.classloading.ClassPathElement;
 import io.quarkus.bootstrap.classloading.QuarkusClassLoader;
 import io.quarkus.deployment.annotations.BuildProducer;
 import io.quarkus.deployment.annotations.BuildStep;
+import io.quarkus.deployment.annotations.Consume;
 import io.quarkus.deployment.annotations.ExecutionTime;
 import io.quarkus.deployment.annotations.Record;
 import io.quarkus.deployment.builditem.FeatureBuildItem;
@@ -93,11 +94,11 @@ class CSimpleProcessor {
     }
 
     @BuildStep
-    void collectCSimpleExpresions(
+    void collectCSimpleExpressions(
             CamelConfig config,
             List<CamelRoutesBuilderClassBuildItem> routesBuilderClasses,
             BuildProducer<CSimpleExpressionSourceBuildItem> csimpleExpressions)
-            throws IOException, ClassNotFoundException, URISyntaxException, JAXBException {
+            throws ClassNotFoundException {
 
         if (!routesBuilderClasses.isEmpty()) {
             final ClassLoader loader = Thread.currentThread().getContextClassLoader();
@@ -114,11 +115,11 @@ class CSimpleProcessor {
                 final Class<?> cl = loader.loadClass(className);
 
                 if (!RouteBuilder.class.isAssignableFrom(cl)) {
-                    LOG.warnf("CSimple language expressions ocurring in %s won't be compiled at build time", cl);
+                    LOG.warnf("CSimple language expressions occurring in %s won't be compiled at build time", cl);
                 } else {
                     try {
-                        final RouteBuilder rb = (RouteBuilder) cl.newInstance();
-                        rb.setContext(ctx);
+                        final RouteBuilder rb = (RouteBuilder) cl.getDeclaredConstructor().newInstance();
+                        rb.setCamelContext(ctx);
                         try {
                             rb.configure();
                             collector.collect(
@@ -154,7 +155,8 @@ class CSimpleProcessor {
                             }
                         }
 
-                    } catch (InstantiationException | IllegalAccessException e) {
+                    } catch (InstantiationException | IllegalAccessException | NoSuchMethodException
+                            | InvocationTargetException e) {
                         throw new RuntimeException("Could not instantiate " + className, e);
                     }
                 }
@@ -163,7 +165,7 @@ class CSimpleProcessor {
     }
 
     @BuildStep
-    void compileCSimpleExpresions(
+    void compileCSimpleExpressions(
             List<CSimpleExpressionSourceBuildItem> expressionSources,
             BuildProducer<CompiledCSimpleExpressionBuildItem> compiledCSimpleExpression,
             BuildProducer<GeneratedClassBuildItem> generatedClasses) throws IOException {
@@ -247,10 +249,10 @@ class CSimpleProcessor {
 
     @Record(ExecutionTime.STATIC_INIT)
     @BuildStep
+    @Consume(CamelContextBuildItem.class)
     CamelBeanBuildItem configureCSimpleLanguage(
             RecorderContext recorderContext,
             CSimpleLanguageRecorder recorder,
-            CamelContextBuildItem camelContext,
             List<CompiledCSimpleExpressionBuildItem> compiledCSimpleExpressions) {
 
         final RuntimeValue<Builder> builder = recorder.csimpleLanguageBuilder();
@@ -267,7 +269,7 @@ class CSimpleProcessor {
         while (confiUrls.hasMoreElements()) {
             final URL configUrl = confiUrls.nextElement();
             try (BufferedReader r = new BufferedReader(new InputStreamReader(configUrl.openStream(), StandardCharsets.UTF_8))) {
-                String line = null;
+                String line;
                 while ((line = r.readLine()) != null) {
                     line = line.trim();
                     // skip comments
@@ -322,14 +324,14 @@ class CSimpleProcessor {
      */
     static class ExpressionCollector {
         private final JAXBContext jaxbContext;
-        private final Marshaller marshaler;
+        private final Marshaller marshaller;
 
         ExpressionCollector(ClassLoader loader) {
             try {
                 jaxbContext = JAXBContext.newInstance(Constants.JAXB_CONTEXT_PACKAGES, loader);
                 Marshaller m = jaxbContext.createMarshaller();
                 m.setListener(new RouteDefinitionNormalizer());
-                marshaler = m;
+                marshaller = m;
             } catch (JAXBException e) {
                 throw new RuntimeException("Could not creat a JAXB marshaler", e);
             }
@@ -340,7 +342,7 @@ class CSimpleProcessor {
                     expressionConsumer);
             for (NamedNode node : nodes) {
                 try {
-                    marshaler.marshal(node, handler);
+                    marshaller.marshal(node, handler);
                 } catch (JAXBException e) {
                     throw new RuntimeException("Could not collect '" + languageName + "' expressions from node " + node, e);
                 }
@@ -357,7 +359,6 @@ class CSimpleProcessor {
                 }
             }
         }
-
     }
 
 }
